# hash-sig-cli

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: auto-release.yml  ci.yml
src/: main.rs
