[package]
name = "hash-sig-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[[bin]]
name = "hashsig"
path = "src/main.rs"

[dependencies]
# LeanSig library (from GitHub repository, pinned to commit)
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "f10dcbefac2502d356d93f686e8b4ecd8dc8840a" }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding
hex = "0.4"

# Random number generation
rand = "0.9"

