[package]
name = "hash-sig-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"

[[bin]]
name = "hashsig"
path = "src/main.rs"

[dependencies]
# LeanSig library (from GitHub repository, pinned to commit)
leansig = { git = "https://github.com/leanEthereum/leanSig.git", rev = "73bedc26ed961b110df7ac2e234dc11361a4bf25" }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hex encoding
hex = "0.4"

# Random number generation
rand = "0.9"

